--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ audio, canvas, video { display: inline-block }
 audio:not([controls]) { display: none; height: 0; }
 [hidden] { display: none }
 html { font-family: sans-serif; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-body { margin: 0 }
+body { margin: 0 
+       font-family: 'Roboto', sans-serif;}
 a:active, a:hover, a:focus { outline: 0 }
 h1 { font-size: 2em }
 abbr[title] { border-bottom: 1px dotted }
